# storage/api-docs/api-docs.json
@@ -29,7 +29,7 @@
                 }
             }
         },
-        "/api/job/{id}": {
+        "/api/jobs/{id}": {
             "get": {
                 "tags": [
                     "job"
@@ -45,9 +45,7 @@
                         "required": true,
                         "schema": {
                             "type": "integer",
-                            "format": "int64",
-                            "maximum": 10,
-                            "minimum": 1
+                            "format": "int64"
                         }
                     }
                 ],
@@ -78,9 +76,7 @@
                         "required": true,
                         "schema": {
                             "type": "integer",
-                            "format": "int64",
-                            "maximum": 10,
-                            "minimum": 1
+                            "format": "int64"
                         }
                     }
                 ],
@@ -104,7 +100,10 @@
                 "properties": {
                     "urls": {
                         "type": "array",
-                        "items": {}
+                        "items": {
+                            "type": "string",
+                            "default": "https://example.com"
+                        }
                     }
                 },
                 "type": "object"
